# gabe-spiritual-app

./: COMMIT_EDITMSG  ORIG_HEAD  PRAYER_JOURNAL_INFO.md  README_GABE.md  app.py  cookies.txt  drop_of_hope.py  firebase_service.py  gabe-app __init__.py  gabe_ai.py  gabe_companion.py  gamified_spiritual_features.py  index  index.html  landing.html  login.html  modal-fix.js  models.py  pyproject.toml  register.html  replit.md  requirements.txt  spiritual_features.py
gabe_app/: __init__.py  models.py  run.py
gabe_app/gabe_app/routes/: auth_routes.py  main_routes.py
gabe_app/gabe_app/routes/gabe_app/routes/: api_routes.py
gabe_app/gabe_app/routes/gabe_app/routes/gabe_app/: models.py
gabe_app/gabe_app/routes/gabe_app/routes/gabe_app/gabe_app/templates/: chat.html  index.html  login.html  register.html  welcome.html
gabe_app/gabe_app/routes/gabe_app/routes/gabe_app/gabe_app/templates/gabe_app/static/: style.css
