[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "firebase-admin>=7.0.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.26.0",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "openai>=1.97.1",
    "psycopg2-binary>=2.9.10",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "sift-stack-py>=0.7.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
]
